--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,2 @@
-DATABASE_URL=
+DATABASE_URL=postgres://root:password@localhost:26257/library?sslmode=disable
+COCKROACH_DATABASE_URL='cockroach://root:password@localhost:26257/library?sslmode=disable'
